--- a/resources/assets/sass/layout/_cards.scss
+++ b/resources/assets/sass/layout/_cards.scss
@@ -1,7 +1,10 @@
 .cards {
+
+    .mg15 {
+        margin: 15px 0px;
+    }
     .card {
         background-color: lightgray;
         color: white;
-        margin: 15px;
     }
 }
