--- a/resources/assets/sass/layout/_nav.scss
+++ b/resources/assets/sass/layout/_nav.scss
@@ -13,6 +13,8 @@
 
 .button-search {
     background: none; border: none;
+    display: flex;
+    align-items: center;
 
     input {
         border: none;
